로또 만들기 2일차 구현 (#191)
* Apply code review: use underbar in the integer literals

* Apply code review: no multiple declaration of the same constant

* Apply code review: use stream to decide rank

* Apply code review: use the message of exception

* Apply code review: use more specific method name

* Apply code review: use set in the constructor of Lottery and WinningLottery

* Apply code review: use the field of lottery directly in output view

* Apply code review: fix the inappropriate access modifier

* Apply code review: improve the flow to checkthe rank of lotteries

* Fix: remove the unused constant

* Apply code review: make the result class immutable

* Implement mission 2: fix printResult to match the format of example output

* Implement mission 2: add the bonus ball to decide 2nd rank

* Fix: final keyword not used

* Improve: use stream to calcuate the count of matched number in Lottery

* Fix: inappropriate access modifier

* Fix: inappropriate identifiers

* Fix: doesn't exit when IllegalArgumentException thrown in ConsoleInputView

* Improvement: add more validation rules

* Fix: floating point error occurs

* Implement mission 2: add the dependency for test code

* Implement mission 2: add test code